Fixe error color

--- a/core/template/dashboard/scan_ip.html
+++ b/core/template/dashboard/scan_ip.html
@@ -31,7 +31,7 @@
     
     <div style="margin-top:3px;">
         <div style="text-align: center; width: 100%; color: #A9A9A9; font-size: 85%; margin-bottom: -4px;">Dernier ip v4</div>
-        <div style="text-align: center; width: 100%;">#last_ip_v4#</div>
+        <div style="text-align: center; width: 100%; #etat_last_ip#">#last_ip_v4#</div>
     </div>
     
     <div style="margin-top:3px;">
