Change Titre et mac

--- a/core/template/dashboard/scan_ip.html
+++ b/core/template/dashboard/scan_ip.html
@@ -4,8 +4,8 @@
     </span>
     <span class="cmd cmd-widget" data-cmd_id="#refresh_id#" style="display:none;"></span>
     <center class="widget-name">
-        <span class="reportModeVisible">#mac#<span class="object_name">#object_name#</span></span>
-        <a href="#eqLink#" class="reportModeHidden">#mac#<span class="object_name">#object_name#</span></a>
+        <span class="reportModeVisible">#name_display#<span class="object_name">#object_name#</span></span>
+        <a href="#eqLink#" class="reportModeHidden">#name_display#<span class="object_name">#object_name#</span></a>
     </center>
     
     <script>
@@ -14,7 +14,7 @@
         }); 
     </script>
     
-    <div style="text-align: center; width: 100%; color: #0059bc; font-weight: bold;">#name_display#</div>
+    <div style="text-align: center; width: 100%;">#mac#</div>
     
     <div style="border-top: 1px solid grey; width : 100%; margin-top: 5px;"><hr></div>
     
