- gros refacto (fichiers class) - Finalisation tableau Alerte

--- a/core/template/dashboard/scan_ip_network.html
+++ b/core/template/dashboard/scan_ip_network.html
@@ -48,6 +48,6 @@
         <a href="#eqLink#" class="reportModeHidden">#name_display#<span class="object_name">#object_name#</span></a>
     </center>
      
-    <div class="scan_ip_network_scroller">widget_network</div>  
+    <div class="scan_ip_network_scroller">#widget_network#</div>  
    
 </div>
