--- a/core/template/dashboard/scan_ip_network.html
+++ b/core/template/dashboard/scan_ip_network.html
@@ -42,7 +42,7 @@
     }
 </style>
 
-<div class="eqLogic eqLogic-widget allowResize" data-eqType="#eqType#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="width: #width#;height: #height#;min-height:245px;#style#;">
+<div class="eqLogic eqLogic-widget allowResize" data-eqType="#eqType#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="width: #width#;height: #height#;min-height:245px;min-width:1152px;#style#;">
     <center class="widget-name">
         <span class="reportModeVisible">#name_display#<span class="object_name">#object_name#</span></span>
         <a href="#eqLink#" class="reportModeHidden">#name_display#<span class="object_name">#object_name#</span></a>
