--- a/core/template/dashboard/scan_ip_alerte.html
+++ b/core/template/dashboard/scan_ip_alerte.html
@@ -1,4 +1,4 @@
-<div class="eqLogic eqLogic-widget allowResize" data-eqType="#eqType#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="width: #width#;height: #height#;min-height:230px;#style#;">
+<div class="eqLogic eqLogic-widget allowResize" data-eqType="#eqType#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="width: #width#;height: #height#;min-height:100px;min-width:992px;#style#;">
     <center class="widget-name">
         <span class="reportModeVisible">#name_display#<span class="object_name">#object_name#</span></span>
         <a href="#eqLink#" class="reportModeHidden">#name_display#<span class="object_name">#object_name#</span></a>
