--- a/core/template/dashboard/scan_ip_alerte.html
+++ b/core/template/dashboard/scan_ip_alerte.html
@@ -8,8 +8,17 @@
     .scanTd{
         padding : 3px 0 3px 15px !important;
     }
+    
+    .scan_ip_alerte_scroller {
+        margin-top: -5px;
+        width: 100%;
+        max-height: 100%;
+        overflow-y: scroll;
+        scrollbar-color: auto;
+        scrollbar-width: thin;
+    }
 </style>
     
-    #last_unknown_equipement#
+    <div class="scan_ip_alerte_scroller">#last_unknown_equipement#</div>
 
 </div>
