--- a/core/template/dashboard/scan_ip_alerte.html
+++ b/core/template/dashboard/scan_ip_alerte.html
@@ -1,24 +1,10 @@
-<div class="eqLogic eqLogic-widget allowResize" data-eqType="#eqType#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="width: #width#;height: #height#;min-height:100px;min-width:992px;#style#;">
+
+<div class="eqLogic eqLogic-widget allowResize" data-eqType="#eqType#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="width: #width#;height: #height#;#style#;">
     <center class="widget-name">
         <span class="reportModeVisible">#name_display#<span class="object_name">#object_name#</span></span>
         <a href="#eqLink#" class="reportModeHidden">#name_display#<span class="object_name">#object_name#</span></a>
     </center>
     
-    <style>
-    .scanTd{
-        padding : 3px 0 3px 15px !important;
-    }
-    
-    .scan_ip_alerte_scroller {
-        margin-top: -5px;
-        width: 100%;
-        max-height: 100%;
-        overflow-y: scroll;
-        scrollbar-color: auto;
-        scrollbar-width: thin;
-    }
-</style>
-    
-    <div class="scan_ip_alerte_scroller">#last_unknown_equipement#</div>
+    <div style="margin-top: -5px; width: 100%; max-height: 100%; overflow-y: scroll; scrollbar-color: auto; scrollbar-width: thin;">#last_unknown_equipement#</div>
 
 </div>
